# rdt-724-00128-nowo-es

./: Dockerfile  Jenkinsfile  README.md  build.sh  generate_swagger.py  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: common-config.properties  k8s-deploy-dev.yml  k8s-deploy-pro.yml  test-and-quality.yml
delivery/aggregator/: aggreator.pkl
delivery/model/: catboost.bst
delivery/rdt/: rdt_pro.pkl
resources/: application.yml  rdt_swagger.yaml
